# fly-code

./: ARCHITECTURE.md  CLAUDE.md  README.md  TODO.md  pyproject.toml
cli/: main.py  repl.py
core/: agent.py  ai_client.py  analyzer.py  deployer.py  developer.py  planner.py  tester.py
core/models/: __init__.py  base.py  minimax_model.py  ollama_model.py
core/tools/: __init__.py  base.py  bash_tool.py  edit_tool.py  file_tool.py  git_tool.py  glob_tool.py  grep_tool.py
docs/: reader.py  spec_manager.py
fly_code.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_core.py
utils/: logger.py
