[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fly-code"
version = "0.1.0"
description = "Documentation-driven programming agent CLI"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27.0"]

[project.scripts]
fly-code = "cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "core*", "docs*", "utils*"]
